--- a/Pizza/pizza.css
+++ b/Pizza/pizza.css
@@ -1,3 +1,58 @@
 .menu {
-	font-family: "Helvetica";
+	font-family: "Courier New";
 }
+
+.jumbotron {
+  background-image: url("./pizza.jpg");
+  background-size: cover;
+}
+
+.jumbotron h1 {
+	color:#ECF0F1;
+	font-size:72px;
+	font-weight:bold;
+	font-family:"Courier New";
+	text-shadow: #000 0px 0px 10px;
+}
+.jumbotron p {
+    color:#ECF0F1;
+    font-size:20px;
+	font-family:"Courier New";
+	text-shadow: #000 0px 0px 10px;
+    }
+	
+.nav-link {
+	color:#FDFEFE;
+    font-size:20px;
+	font-family:"Courier New";
+	font-weight:bold;
+}
+
+#items {
+	background-color:#F8C471;
+	border-style: solid;
+	border-width: 5px;
+	padding-bottom: 20px;
+}
+
+#title {
+	text-align:center;
+	font-size: 30px;
+	padding-bottom: 10px;
+}
+
+#total {
+	font-family:"Courier New";
+	text-align:center;
+	font-size: 20px;
+	background-color:#F8C471;
+	border-style: solid;
+	border-width: 5px;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+
+#singlebutton {
+	margin-left: 170px;
+}
+
